--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^5.0.7",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
   }
 }
