feat: adding another eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "extends": [
     "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-type-checked",
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:prettier/recommended",
