chore: adapting jest to recognize @ import alias

--- a/jest.config.json
+++ b/jest.config.json
@@ -8,5 +8,8 @@
   "coverageDirectory": "coverage",
   "transform": {
     ".+\\.ts$": "ts-jest"
+  },
+  "moduleNameMapper": {
+    "@/(.*)": "<rootDir>/src/$1"
   }
 }
