chore: changing prettier to throw warn instead of error

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
-    "jest/no-disabled-tests": "warn"
+    "prettier/prettier": "warn"
   },
   "settings": {
     "react": {
