--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "lint-staged": "^15.2.2",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
