--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,16 @@
     "project": "./tsconfig.json"
   },
   "plugins": ["react", "prettier", "react-hooks", "import", "jest"],
+  "overrides": [
+    {
+      "files": ["*.spec.ts"],
+      "plugins": ["jest"],
+      "rules": {
+        "@typescript-eslint/unbound-method": "off",
+        "jest/unbound-method": "error"
+      }
+    }
+  ],
   "rules": {
     "react/jsx-filename-extension": [
       1,
@@ -27,7 +37,8 @@
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
-    "prettier/prettier": "warn"
+    "prettier/prettier": "warn",
+    "@typescript-eslint/unbound-method": "error"
   },
   "settings": {
     "react": {
