--- a/jest.config.json
+++ b/jest.config.json
@@ -10,6 +10,7 @@
     ".+\\.(ts|tsx)$": "ts-jest"
   },
   "moduleNameMapper": {
+    "\\.(css|scss)$": "identity-obj-proxy",
     "@/(.*)": "<rootDir>/src/$1"
   }
 }
