refactor: remove code duplication from Login tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,14 @@
       }
     ],
     "prettier/prettier": "warn",
-    "@typescript-eslint/unbound-method": "error"
+    "@typescript-eslint/unbound-method": "error",
+    "jest/expect-expect": [
+      "warn",
+      {
+        "assertFunctionNames": ["expect*", "assert*"],
+        "additionalTestBlockFunctions": []
+      }
+    ]
   },
   "settings": {
     "react": {
