fix: removing unnecessary error at jest eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
   "overrides": [
     {
       "files": [
-        "*.spec.ts"
+        "*.spec.ts",
+        "*.spec.tsx"
       ],
       "plugins": [
         "jest"
