--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "lint-staged": "^15.2.2",
     "sass": "^1.75.0",
     "stylelint": "^16.4.0",
